# velari-studios

./: .github  .gitignore  .vscode  AGENTS.md  Makefile  README.md  pyproject.toml
config/: config.yaml
config/runtime/: python.env  runtime.env
config/tracing/: mlflow.yaml
examples/: imports_common.py
examples/config/: config_loader.py
examples/integrations/stf/: encoding.ipynb
scripts/: start_mlflow.sh
velari/: __init__.py  version.py
velari/ai/prompt/: builder.py
velari/core/: __init__.py  experiment.py  types.py
velari/core/io/: filesystem.py
velari/core/io/partition/: hydra.py
velari/core/utils/: env_utils.py
velari/data/datasets/: tabular.py
velari/integrations/sklearn/: scoring.py
velari/integrations/stf/: encoding.py
